# CodeObit

./: .gitignore  .replit  FULLSTACK_DEVELOPMENT.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TERMUX_SETUP.md  chat.py  codeobit_backup_20250723_160300.json  gemini  main.py  project_analysis.json  project_data.json  pyproject.toml  pytest.ini  replit.md  requirements-dev.txt  requirements-termux.txt  requirements.txt  sample_requirements.txt  setup.py  test_analysis.py  test_database.py  test_description.txt  test_requirements.md  version.py
.codeobit/autosave/: code_gen_test_generated_1753265077_20250723_153438.auto  code_gen_test_generated_1753265077_history.json
.codeobit/database/: codeobit.db
cli/: core.py  interactive.py
cli/ai/: __init__.py  gemini_client.py  multi_provider.py
cli/commands/: __init__.py  base.py  browse.py  code.py  database.py  database_old.py  debug.py  design.py  devops.py  docs.py  project.py  qa.py  requirements.py  security.py  test.py
cli/database/: __init__.py  manager.py  migrations.py  models.py
cli/integrations/: __init__.py  aws_integration.py  github_integration.py  jira_integration.py  qwen3_integration.py  slack_integration.py
cli/models/: __init__.py  project.py
cli/utils/: __init__.py  auto_save.py  config.py  file_manager.py  file_mention.py  image_handler.py  project_analyzer.py  project_manager.py  templates.py
cli/web/controllers/: search_controller.py
cli/web/models/: search_model.py
cli/web/presenters/: search_presenter.py
codeobit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: config.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  IMPROVEMENTS_SUMMARY.md
examples/: basic_usage.py
examples/templates/: project_template.json
scripts/: codeobit
tests/: __init__.py
